not part of default build; PathExpr did wrong for //; code by sicking, r=me, sr=shaver, bug 75307